Ensure no break in logo occurs

--- a/www/css/site.scss
+++ b/www/css/site.scss
@@ -393,6 +393,10 @@ h1,h2,h3,h4{
 }
 
 
+.logo-wrapper {
+  white-space: nowrap;
+}
+
 
 #search {
   transition: all 0.3s ease-out;
